--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
       border:3px gray;
 }
 
-.input-form,{
+.input-form {
   padding:5px;
   margin:25px;
   border-radius: 35px;
@@ -31,6 +31,3 @@ footer{
     font-size: 13px;
 }
 
-/* button{
-    margin:35px;
-} */
