--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
+body{
+    text-align: center;
+}
+
 .counter-app{
     display:flex;
     flex-direction: column;
 }
 
 .counter-app{
-    border:3px solid green;
+    border-radius: 15px;
+    background-color:#ccc;
+    opacity: 15;
+    margin-right:450px;
+    margin-left:450px;
     padding:15px;
+    width: 450px;
+    
 }
 
 .button-bar{
@@ -29,8 +39,4 @@
     justify-content: space-between;
 }
 
-footer{
-    text-align: center;
-    font-size: 13px;
-}
 
